--- a/slides/20-logistic-prediction.qmd
+++ b/slides/20-logistic-prediction.qmd
@@ -10,7 +10,7 @@ format:
     theme: slides.scss
     multiplex: false
     transition: fade
-    slide-number: false
+    slide-number: true
     incremental: false 
     chalkboard: true
 html-math-method:
@@ -39,6 +39,10 @@ knitr::opts_chunk$set(
 
 ## Announcements
 
+-   Project: Draft report due + peer review in December 2 lab
+
+-   Statistics experience due Tuesday, November 26
+
 ## Computational set up
 
 ```{r}
@@ -62,7 +66,7 @@ ggplot2::theme_set(ggplot2::theme_bw())
 
 -   Using predicted probabilities to classify observations
 
--   Make decisions and assess modelperformance using
+-   Make decisions and assess model performance using
 
     -   Confusion matrix
     -   ROC curve
@@ -109,14 +113,14 @@ tidy(heart_disease_fit, conf.int = TRUE) |>
 -   For each observation
 
     -   Use the logistic regression model to calculate the predicted log-odds the response for the $i^{th}$ observation is 1
-    -   Use the log-odds to calculate the predicted probability the \$i\^{th} observation is 1
+    -   Use the log-odds to calculate the predicted probability the $i^{th}$ observation is 1
     -   Then, use the predicted probabilities to classify the observation as having a 1 or 0 response using some predefined threshold
 
 ## Predicted log-odds
 
 ```{r}
+#| echo: true
 heart_disease_aug <- augment(heart_disease_fit)
-heart_disease_aug |> select(.fitted)
 ```
 
 ```{r}
@@ -136,7 +140,7 @@ $$
 
 <!--# do i want to deal with residuals? Maybe hide those for now?-->
 
-## Predicted probability 
+## Predicted odds
 
 ```{r}
 #| echo: false
@@ -153,7 +157,7 @@ $$
 \text{predicted odds} = \hat{\omega} = \frac{\hat{\pi}}{1- \hat{\pi}} = \exp\{-3.06\} = 0.0469
 $$
 
-## Predicted probability 
+## Predicted probability
 
 ```{r}
 #| echo: false
@@ -176,7 +180,7 @@ $$
 Would you classify this individual as high risk $(\hat{y} = 1)$ or not high risk $(\hat{y} = 0)$?
 :::
 
-## Another individual 
+## Another individual
 
 ```{r}
 #| echo: false
@@ -199,7 +203,7 @@ $$
 Would you classify this individual as high risk $(\hat{y} = 1)$ or not high risk $(\hat{y} = 0)$?
 :::
 
-## Predictions in R
+## Predicted probabilities in R
 
 We can calculate predicted probabilities using the `predict.glm()` function. Use `type = "response"` to get probabilities.[^1]
 
@@ -253,10 +257,364 @@ heart_disease_aug  |>
 -   What considerations did you make to determine the threshold?
 :::
 
-## Default predictions in R
+## Classify using 0.5 as threshold
 
-We can use the `predict.glm()` function in R to produce the predicted class for each observation
+We can use a threshold of 0.5 to classify observations.
+
+-   If $\hat{\pi} > 0.5$, classify as 1
+
+-   If $\hat{\pi} \leq 0.5$, classify as 0
+
+. . .
 
 ```{r}
-predict.glm(heart_disease_fit, type = "response")
+heart_disease_aug <- heart_disease_aug |>
+  mutate(pred_class = factor(if_else(pred_prob > 0.5, 1, 0)))
 ```
+
+. . .
+
+```{r}
+#| echo: false
+heart_disease_aug |>
+  select(high_risk, .fitted, pred_prob, pred_class) |>
+  slice(1:5)
+```
+
+## Confusion matrix
+
+A **confusion matrix** is a $2 \times 2$ table that compares the predicted and actual classes. We can produce this matrix using the `conf_mat()` function in the **yardstick** package (part of tidymodels).
+
+<br>
+
+. . .
+
+```{r}
+#| echo: true
+heart_disease_aug |>
+  conf_mat(high_risk, pred_class) 
+```
+
+## Visualize confusion matrix
+
+```{r}
+#| echo: true
+heart_conf_mat <- heart_disease_aug |>
+  conf_mat(high_risk, pred_class)
+
+autoplot(heart_conf_mat, type = "heatmap")
+```
+
+## Using the confusion matrix
+
+::: center
+```{r}
+#| echo: false
+
+heart_disease_aug |>
+  conf_mat(high_risk, pred_class) 
+```
+:::
+
+<br>
+
+. . .
+
+The **accuracy** of this model with a classification threshold of 0.5 is
+
+$$
+\text{accuracy} = \frac{3553}{3553 + 635 + 2} = 0.848
+$$
+
+## Using the confusion matrix
+
+::: center
+```{r}
+#| echo: false
+
+heart_disease_aug |>
+  conf_mat(high_risk, pred_class) 
+```
+:::
+
+<br>
+
+. . .
+
+The **misclassification rate** of this model with a threshold of 0.5 is
+
+$$
+\text{misclassification} = \frac{635 + 2}{3553 + 635 + 2} = 0.152
+$$
+
+## Using the confusion matrix
+
+::: center
+```{r}
+#| echo: false
+
+heart_disease_aug |>
+  conf_mat(high_risk, pred_class) 
+```
+:::
+
+<br>
+
+Accuracy is 0.848 and the misclassification rate is 0.152.
+
+. . .
+
+::: question
+-   What is the limitation of solely relying on accuracy and misclassification to assess the model performance?
+
+-   What is the limitation of using a single confusion matrix to assess the model performance?
+:::
+
+# Sensitivity and specificity
+
+## True/false positive/negative {.midi}
+
++-----------------------------------------------------------------------------------+----------------------------------+-----------------------+
+|                                                                                   | <u>Not</u> high risk $(y_i = 0)$ | High risk $(y_i = 1)$ |
++===================================================================================+==================================+=======================+
+| **Classified** <u>**not**</u> **high risk** $(\hat{\pi}_i \leq \text{threshold})$ | True negative (TN)               | False negative (FN)   |
++-----------------------------------------------------------------------------------+----------------------------------+-----------------------+
+| **Classified high risk** $(\hat{\pi}_i > \text{threshold})$                       | False positive (FP)              | True positive (TP)    |
++-----------------------------------------------------------------------------------+----------------------------------+-----------------------+
+
+<br>
+
+-   $\text{accuracy} = \frac{TN + TP}{TN + TP + FN + FP}$
+
+-   $\text{misclassification} = \frac{FN + FP}{TN+ TP + FN + FP}$
+
+## False negative rate {.midi}
+
++--------------------------------------------------------------------+---------------------------+-----------------------+
+|                                                                    | Not high risk $(y_i = 0)$ | High risk $(y_i = 1)$ |
++====================================================================+===========================+=======================+
+| **Classified not high risk** $(\hat{\pi}_i \leq \text{threshold})$ | True negative (TN)        | False negative (FN)   |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+| **Classified high risk** $(\hat{\pi}_i > \text{threshold})$        | False positive (FP)       | True positive (TP)    |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+
+<br>
+
+. . .
+
+**False negative rate**: Proportion of actual positives that were classified as negatives
+
+-   P(classified not high risk \| high risk) = $\frac{FN}{TP + FN}$
+
+## False positive rate {.midi}
+
++--------------------------------------------------------------------+---------------------------+-----------------------+
+|                                                                    | Not high risk $(y_i = 0)$ | High risk $(y_i = 1)$ |
++====================================================================+===========================+=======================+
+| **Classified not high risk** $(\hat{\pi}_i \leq \text{threshold})$ | True negative (TN)        | False negative (FN)   |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+| **Classified high risk** $(\hat{\pi}_i > \text{threshold})$        | False positive (FP)       | True positive (TP)    |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+
+<br>
+
+. . .
+
+**False positive rate**: Proportion of actual negatives that were classified as positives
+
+-   P(classified high risk \| not high risk) = $\frac{FP}{TN + FP}$
+
+## Sensitivity  {.midi}
+
++--------------------------------------------------------------------+---------------------------+-----------------------+
+|                                                                    | Not high risk $(y_i = 0)$ | High risk $(y_i = 1)$ |
++====================================================================+===========================+=======================+
+| **Classified not high risk** $(\hat{\pi}_i \leq \text{threshold})$ | True negative (TN)        | False negative (FN)   |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+| **Classified high risk** $(\hat{\pi}_i > \text{threshold})$        | False positive (FP)       | True positive (TP)    |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+
+<br>
+
+. . .
+
+**Sensitivity**: Proportion of actual positives that were correctly classified as positive
+
+-   Also known as *true positive rate* (TPR) and *recall*
+
+-   **P(classified high risk \| high risk) = 1 − False negative rate**
+
+## Specificity {.midi}
+
++--------------------------------------------------------------------+---------------------------+-----------------------+
+|                                                                    | Not high risk $(y_i = 0)$ | High risk $(y_i = 1)$ |
++====================================================================+===========================+=======================+
+| **Classified not high risk** $(\hat{\pi}_i \leq \text{threshold})$ | True negative (TN)        | False negative (FN)   |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+| **Classified high risk** $(\hat{\pi}_i > \text{threshold})$        | False positive (FP)       | True positive (TP)    |
++--------------------------------------------------------------------+---------------------------+-----------------------+
+
+<br>
+
+. . .
+
+**Specificity**: Proportion of actual negatives that were correctly classified as negative
+
+-   **P(classified not high risk \| not high risk) = 1 − False positive rate**
+
+## Using metrics to select model and threshold {.midi}
+
++-----------------------------------+---------------------------------------------------------------------+
+| Metric                            | Guidance for use                                                    |
++===================================+=====================================================================+
+| Accuracy                          | For balanced data, use only in combination with other metrics.      |
+|                                   |                                                                     |
+|                                   | Avoid using for imbalanced data.                                    |
++-----------------------------------+---------------------------------------------------------------------+
+| Sensitivity (true positive rate)  | Use when false negatives are more "expensive" than false positives. |
++-----------------------------------+---------------------------------------------------------------------+
+| False positive rate               | Use when false positives are more "expensive" than false negatives. |
++-----------------------------------+---------------------------------------------------------------------+
+| Precision = $\frac{TP}{TP + FP}$  | Use when it's important for positive predictions to be accurate.    |
++-----------------------------------+---------------------------------------------------------------------+
+
+::: small
+This table is a modification of work created and shared by Google in the [Google Machine Learning Crash Course](#0).
+:::
+
+## Choosing a classification threshold
+
+::: question
+A doctor plans to use your model to determine which patients are high risk for heart disease. The doctor will recommend a treatment plan for high risk patients.
+
+-   Would you want sensitivity and specificity to be high or low?
+
+-   What are the trade-offs associated with each decision?
+:::
+
+## ROC curve
+
+So far the model assessment has depended on the model and selected threshold. The **receiver operating characteristic (ROC) curve** allows to assess the model performance across a range of thresholds.
+
+::: columns
+::: {.column width="65%"}
+```{r}
+#| echo: false
+
+# calculate sensitivity and specificity at each threshold
+roc_curve_data <- heart_disease_aug |>
+  roc_curve(high_risk, .fitted, 
+            event_level = "second") 
+
+# plot roc curve
+autoplot(roc_curve_data)
+```
+:::
+
+::: {.column width="35%"}
+-   x-axis: 1 - Specificity (False positive rate)
+
+-   y-axis: Sensitivity (True positive rate)
+
+Which corner of the plot indicates the best model performance?
+:::
+:::
+
+## ROC curve
+
+```{r}
+#| echo: false
+#| out-width: 100%
+
+heart_disease_aug |>
+  roc_curve(high_risk, .fitted, 
+            event_level = "second")  |>
+  autoplot() +
+  annotate("point", x = 0, y = 1, color = "#5B888C") +
+  annotate("point", x = 0, y = 1, color = "#5B888C", size = 3, shape = "circle open") +
+  annotate(
+    "label", x = 0.02, y = 0.99, label = "All high risk classified as high risk,\nall not high risk classified as not high risk", hjust = 0, color = "#5B888C", fontface = "bold", vjust = 1, fill = "white"
+  ) +
+  annotate("point", x = 1, y = 0, color = "#8F2D56") +
+  annotate("point", x = 1, y = 0, color = "#8F2D56", size = 3, shape = "circle open") +
+  annotate(
+    "label", x = 0.98, y = 0.01, label = "All high risk classifed as not high risk,\nall not high risk classified as high risk", hjust = 1, color = "#8F2D56", fontface = "bold", vjust = 0, fill = "white"
+  ) +
+  annotate(
+    "segment", color = "#5b708c", x = 0, y = 0, xend = 1, yend = 1, size = 2, alpha = 0.6
+  ) +
+  annotate(
+    "label", x = 0.58, y = 0.5, label = "True positive rate\n= false positive rate", hjust = 0, color = "#5b708c", fontface = "bold", fill = "white"
+  )
+```
+
+## ROC curve in R {.midi}
+
+```{r}
+#| echo: true
+#| eval: false
+
+
+# calculate sensitivity and specificity at each threshold
+roc_curve_data <- heart_disease_aug |>
+  roc_curve(high_risk, .fitted, 
+            event_level = "second") 
+
+# plot roc curve
+autoplot(roc_curve_data)
+```
+
+## ROC curve in R
+
+::: columns
+::: {.column width="40%"}
+```{r}
+#| echo: false
+
+roc_curve_data |>
+  slice(1:5)
+
+```
+:::
+
+::: {.column width="60%"}
+```{r}
+#| echo: false
+
+autoplot(roc_curve_data)
+```
+:::
+:::
+
+## Area under the curve
+
+The **area under the curve (AUC)** can be used to assess how well the logistic model fits the data
+
+-   AUC=0.5: model is a very bad fit (no better than a coin flip)
+
+-   AUC close to 1: model is a good fit
+
+. . .
+
+```{r}
+#| echo: true
+heart_disease_aug |>
+  roc_auc(high_risk, .fitted,
+    event_level = "second"
+  )
+```
+
+## Recap 
+
+-   Calculated predicted probabilities from the logistic regression model
+
+-   Used predicted probabilities to classify observations
+
+-   Made decisions and assessed model performance using
+
+    -   Confusion matrix
+    -   ROC curve
+
+## Further reading
+
+[Classification](https://developers.google.com/machine-learning/crash-course/classification) module in Google Machine Learning Crash Course
