--- a/slides/references.bib
+++ b/slides/references.bib
@@ -30,3 +30,14 @@
   year={2024},
   publisher={CRC Press}
 }
+
+@article{wilks1935likelihood,
+  title={The likelihood test of independence in contingency tables},
+  author={Wilks, SS},
+  journal={The Annals of Mathematical Statistics},
+  volume={6},
+  number={4},
+  pages={190--196},
+  year={1935},
+  publisher={JSTOR}
+}
