--- a/slides/21-logistic-inference.qmd
+++ b/slides/21-logistic-inference.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Logistic Regression: Prediction"
+title: "Logistic Regression: Inference"
 author: "Prof. Maria Tackett"
-date: "2024-11-12"
+date: "2024-11-14"
 date-format: "MMM DD, YYYY"
 footer: "[🔗 STA 221 - Fall 2024](https://sta221-fa24.netlify.app)"
 logo: "../images/logo.png"
@@ -23,6 +23,8 @@ knitr:
   opts_chunk: 
     R.options:      
     width: 200
+    
+bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE, echo=FALSE}
@@ -42,7 +44,7 @@ knitr::opts_chunk$set(
 
 -   Statistics experience due Tuesday, November 26
 
--   HW 04 released on Thursday
+-   HW 04 released later today. Due Thursday, November 21
 
 ## Topics
 
@@ -108,8 +110,6 @@ heart_disease <- read_csv("data/framingham.csv") |>
   )
 ```
 
-# Inference for coefficients
-
 ## Modeling risk of coronary heart disease
 
 Using `age`, `totChol`, `currentSmoker`
@@ -169,6 +169,33 @@ $$
 -   Large values of $G$ (small p-values) indicate at least one $\beta_j$ is non-zero
 :::
 
+## $\chi^2$ distribution 
+
+```{r}
+#| echo: false
+#| fig-height: 6
+
+x <- seq(from =0, to = 10, length = 100)
+
+# Evaluate the densities
+y_1 <- dchisq(x, 1)
+y_2 <- dchisq(x,2)
+y_3 <- dchisq(x,3)
+y_4 <- dchisq(x,5)
+
+# Plot the densities
+plot(x, y_1, col = 1, type = "l", ylab="",lwd=3, ylim = c(0, 0.5), 
+     main  = "Chi-square Distribution")
+lines(x,y_2, col = 2,lwd=3)
+lines(x, y_3, col = 3,lwd=3)
+lines(x, y_4, col = 4,lwd=3)
+
+# Add the legend
+legend("topright",
+       c("df = 1", "df = 2 ", "df = 3", "df = 5"), 
+       col = c(1, 2, 3, 4), lty = 1)
+```
+
 ## Heart disease model: likelihood ratio test
 
 $$
@@ -225,29 +252,183 @@ tidy(null_model) |>
 
 The p-value is small, so we reject $H_0$. The data provide evidence of at least one non-zero model coefficient in the model.
 
-### LRT for subset of coefficients
+# Test a subset of coefficients
 
-## Inference for coefficients
+## Testing a subset of coefficients
 
-There are two approaches for testing coefficients in logistic regression
+-   Suppose there are two models:
 
--   **Drop-in-deviance test**. Use to test...
+    -   Reduced Model: includes predictors $x_1, \ldots, x_q$
 
-    -   a single coefficient
-    -   a categorical predictor with 3+ levels
-    -   a group of predictor variables
+    -   Full Model: includes predictors $x1, \ldots, x_q, x_{q+1}, \ldots, x_p$
 
--   **(Wald) hypothesis test.** Use to test
+-   We can use the likelihood ratios to see if any of the new predictors are useful
 
-    -   a single coefficient
+. . .
 
-## Hypothesis test for $\beta_j$
+$$
+\begin{aligned}
+&H_0: \beta_{q+1} = \dots = \beta_p = 0\\
+&H_a: \beta_j \neq 0 \text{ for at least one }j
+\end{aligned}
+$$
+
+. . .
+
+This is called a **drop-in-deviance** test (also known as nested likelihood ratio test)
+
+## Deviance
+
+The **deviance** is a measure of the degree to which the predicted values are different from the observed values
+
+$$
+D = -2 \log L
+$$
+
+$D \sim \chi^2_{n - p - 1}$ ( $D$ follows a Chi-square distribution with $n - p - 1$ degrees of freedom)
+
+Note: $n - p - 1$ a the degrees of freedom associated with the residuals, i.e., error in the model
+
+## Drop-in-deviance test
+
+$$
+\begin{aligned}
+&H_0: \beta_{q+1} = \dots = \beta_p = 0\\
+&H_a: \beta_j \neq 0 \text{ for at least one }j
+\end{aligned}
+$$
+
+. . .
+
+The test statistic is
+
+$$
+\begin{aligned}
+G &= D_{reduced} - D_{full} = -2\log L_{reduced} - (-2 \log L_{full}) \\
+&= -2(\log L_{reduced} - \log L_{full})
+\end{aligned}
+$$
+
+. . .
+
+The p-value is calculated using a $\chi_{\Delta df}^2$ distribution, where $\Delta df$ is the number of parameters being tested (the difference in number of parameters between the full and reduced model).
+
+## Heart disease model: drop-in-deviance test
+
+Should we add `education` to the model?
+
+-   Reduced model: `age`, `totChol`, `currentSmoker`
+
+-   Full model: `age`, `totChol`, `currentSmoker` , `education`
+
+. . .
+
+$$
+\begin{aligned}
+&H_0: \beta_{ed1} = \beta_{ed2} = \beta_{ed3} = 0 \\
+&H_a: \beta_j \neq 0 \text{ for at least one }j
+\end{aligned}
+$$
+
+## Heart disease model: drop-in-deviance test {.midi}
+
+```{r}
+reduced_model <- glm(high_risk ~ age + totChol + currentSmoker, 
+              data = heart_disease, family = "binomial")
+
+full_model <- glm(high_risk ~ age + totChol + currentSmoker + education, 
+              data = heart_disease, family = "binomial")
+```
+
+. . .
+
+**Calculate deviances**
+
+```{r}
+(deviance_reduced <- -2 * glance(reduced_model)$logLik)
+(deviance_full <- -2 * glance(full_model)$logLik)
+```
+
+. . .
+
+**Calculate test statistic**
+
+```{r}
+(G <- deviance_reduced - deviance_full)
+```
+
+## Heart disease model: drop-in-deviance test
+
+**Calculate p-value**
+
+```{r}
+pchisq(G, df = 3, lower.tail = FALSE)
+```
+
+<br>
+
+. . .
+
+::: question
+What is your conclusion? Would you include `education` in the model that already includes `age`, `totChol`, `education`?
+:::
+
+## Drop-in-deviance test in R {.midi}
+
+Conduct the drop-in-deviance test using the `anova()` function in R with option `test = "Chisq"`
+
+```{r}
+anova(reduced_model, full_model, test = "Chisq") |> 
+  tidy() |> 
+  kable(digits = 3)
+```
+
+## AIC and BIC
+
+Similar to linear regression, we can use AIC and BIC to compare models.
+
+$$
+\begin{aligned}
+&AIC = -2 \log L + 2(p+1) \\
+&BIC = -2 \log L + \log(n)(p + 1)
+\end{aligned}
+$$
+
+You want to select the model that minimizes AIC / BIC
+
+# Test for a single coefficient
+
+## Distribution of $\hat{\boldsymbol{\beta}}$ 
+
+When $n$ is large, $\hat{\boldsymbol{\beta}}$, the estimated coefficients of the logistic regression model, is approximately normal.
+
+::: question
+How do we know the distribution of $\hat{\boldsymbol{\beta}}$ is normal for large $n$?
+:::
+
+## Distribution of $\hat{\boldsymbol{\beta}}$ 
+
+The expected value of $\hat{\boldsymbol{\beta}}$ is the true parameter, $\beta$, i.e., $E(\hat{\boldsymbol{\beta}}) = \boldsymbol{\beta}$
+
+. . .
+
+$Var(\hat{\boldsymbol{\beta}})$, the matrix of variances and covariances between estimators, is found by taking the second partial derivatives of the log-likelihood function (Hessian matrix)
+
+$$
+Var(\hat{\boldsymbol{\beta}}) = (\mathbf{X}^T\mathbf{V}\mathbf{X})^{-1}
+$$
+
+where $\mathbf{V}$ is a $n\times n$ diagonal matrix such that $V_{ii}$ is the estimated variance for the $i^{th}$ observation
+
+## Test for a single coefficient
 
 **Hypotheses:** $H_0: \beta_j = 0 \hspace{2mm} \text{ vs } \hspace{2mm} H_a: \beta_j \neq 0$, given the other variables in the model
 
 . . .
 
-**Test Statistic:** $$z = \frac{\hat{\beta}_j - 0}{SE_{\hat{\beta}_j}}$$
+**(Wald) Test Statistic:** $$z = \frac{\hat{\beta}_j - 0}{SE(\hat{\beta}_j)}$$
+
+where $SE(\hat{\beta}_j)$ is the square root of the $j^{th}$ diagonal element of $Var(\hat{\boldsymbol{\beta}})$
 
 . . .
 
@@ -258,7 +439,7 @@ There are two approaches for testing coefficients in logistic regression
 We can calculate the **C% confidence interval** for $\beta_j$ as the following:
 
 $$
-\Large{\hat{\beta}_j \pm z^* SE_{\hat{\beta}_j}}
+\Large{\hat{\beta}_j \pm z^* SE(\hat{\beta}_j)}
 $$
 
 where $z^*$ is calculated from the $N(0,1)$ distribution
@@ -274,12 +455,12 @@ This is an interval for the change in the log-odds for every one unit increase i
 The change in **odds** for every one unit increase in $x_j$.
 
 $$
-\Large{exp\{\hat{\beta}_j \pm z^* SE_{\hat{\beta}_j}\}}
+\Large{\exp\{\hat{\beta}_j \pm z^* SE(\hat{\beta}_j)\}}
 $$
 
 . . .
 
-**Interpretation:** We are $C\%$ confident that for every one unit increase in $x_j$, the odds multiply by a factor of $exp\{\hat{\beta}_j - z^* SE_{\hat{\beta}_j}\}$ to $exp\{\hat{\beta}_j + z^* SE_{\hat{\beta}_j}\}$, holding all else constant.
+**Interpretation:** We are $C\%$ confident that for every one unit increase in $x_j$, the odds multiply by a factor of $\exp\{\hat{\beta}_j - z^* SE(\hat{\beta}_j)\}$ to $\exp\{\hat{\beta}_j + z^* SE(\hat{\beta}_j)\}$, holding all else constant.
 
 ## Coefficient for `age` {.midi}
 
@@ -298,7 +479,7 @@ tidy(heart_disease_fit, conf.int = TRUE) |>
 
 $$
 H_0: \beta_{age} = 0 \hspace{2mm} \text{ vs } \hspace{2mm} H_a: \beta_{age} \neq 0
-$$, given education is in the model
+$$, given total cholesterol and smoking status are in the model.
 
 ## Coefficient for `age` {.midi}
 
@@ -309,7 +490,7 @@ $$, given education is in the model
 
 **Test statistic:**
 
-$$z = \frac{0.07559 - 0}{0.00554} = 13.64
+$$z = \frac{ 0.0825  - 0}{0.00575} = 14.34
 $$
 
 ## Coefficient for `age` {.midi}
@@ -321,14 +502,13 @@ $$
 
 **P-value:**
 
-$$
-P(|Z| > |13.64|) \approx 0
+$$P(|Z| > |14.34|) \approx 0
 $$
 
 . . .
 
 ```{r}
-2 * pnorm(13.64,lower.tail = FALSE)
+2 * pnorm(14.34,lower.tail = FALSE)
 ```
 
 ## Coefficient for `age` {.midi}
@@ -340,7 +520,7 @@ $$
 
 **Conclusion:**
 
-The p-value is very small, so we reject $H_0$. The data provide sufficient evidence that age is a statistically significant predictor of whether someone is high risk of having heart disease, after accounting for education.
+The p-value is very small, so we reject $H_0$. The data provide sufficient evidence that age is a statistically significant predictor of whether someone is high risk of having heart disease, after accounting for total cholesterol and smoking status.
 
 ## CI for `age`
 
@@ -353,170 +533,26 @@ The p-value is very small, so we reject $H_0$. The data provide sufficient evide
 Interpret the 95% confidence interval for `age` in terms of the **odds** of being high risk for heart disease.
 :::
 
-# Application exercise
+## Overview of testing coefficients
 
-::: appex
-📋 [AE 15: Inference for Logistic Regression](../ae/ae-15-logistic-inference.html)
-:::
+**Test a single coefficient**
 
-# Conditions
+-   Likelihood ratio test
 
-## The model {.smaller}
+-   Drop-in-deviance test
 
-Let's predict `high_risk` from age, total cholesterol, and whether the patient is a current smoker:
-
-```{r}
-heart_disease_fit <- logistic_reg() |>
-  set_engine("glm") |>
-  fit(high_risk ~ age + totChol + currentSmoker, 
-      data = heart_disease, family = "binomial")
-
-tidy(heart_disease_fit, conf.int = TRUE) |> 
-  kable(digits = 3)
-```
-
-## Conditions for logistic regression
-
-1.  **Linearity:** The log-odds have a linear relationship with the predictors.
-
-2.  **Randomness:** The data were obtained from a random process
-
-3.  **Independence:** The observations are independent from one another.
-
-## Empirical logit
-
-The **empirical logit** is the log of the observed odds:
-
-$$
-\text{logit}(\hat{p}) = \log\Big(\frac{\hat{p}}{1 - \hat{p}}\Big) = \log\Big(\frac{\# \text{Yes}}{\# \text{No}}\Big)
-$$
-
-## Calculating empirical logit (categorical predictor)
-
-If the predictor is categorical, we can calculate the empirical logit for each level of the predictor.
-
-```{r}
-heart_disease |>
-  count(currentSmoker, high_risk) |>
-  group_by(currentSmoker) |>
-  mutate(prop = n/sum(n)) |>
-  filter(high_risk == "1") |>
-  mutate(emp_logit = log(prop/(1-prop)))
-```
-
-## Calculating empirical logit (quantitative predictor)
-
-1.  Divide the range of the predictor into intervals with approximately equal number of cases. (If you have enough observations, use 5 - 10 intervals.)
-
-2.  Compute the empirical logit for each interval
+-   Wald hypothesis test and confidence interval
 
 . . .
 
-You can then calculate the mean value of the predictor in each interval and create a plot of the empirical logit versus the mean value of the predictor in each interval.
+**Test a subset of coefficients**
 
-## Empirical logit plot in R (quantitative predictor)
+-   Likelihood ratio test
 
-Created using `dplyr` and `ggplot` functions.
-
-```{r}
-#| echo: false
-heart_disease |> 
-  mutate(age_bin = cut_interval(age, n = 10)) |>
-  group_by(age_bin) |>
-  mutate(mean_age = mean(age)) |>
-  count(mean_age, high_risk) |>
-  mutate(prop = n/sum(n)) |>
-  filter(high_risk == "1") |>
-  mutate(emp_logit = log(prop/(1-prop))) |>
-  ggplot(aes(x = mean_age, y = emp_logit)) + 
-  geom_point() + 
-  geom_smooth(method = "lm", se = FALSE) +
-  labs(x = "Mean Age", 
-       y = "Empirical logit")
-```
-
-## Empirical logit plot in R (quantitative predictor)
-
-Created using `dplyr` and `ggplot` functions.
-
-```{r}
-#| eval: false
-#| 
-heart_disease |> 
-  mutate(age_bin = cut_interval(age, n = 10)) |>
-  group_by(age_bin) |>
-  mutate(mean_age = mean(age)) |>
-  count(mean_age, high_risk) |>
-  mutate(prop = n/sum(n)) |>
-  filter(high_risk == "1") |>
-  mutate(emp_logit = log(prop/(1-prop))) |>
-  ggplot(aes(x = mean_age, y = emp_logit)) + 
-  geom_point() + 
-  geom_smooth(method = "lm", se = FALSE) +
-  labs(x = "Mean Age", 
-       y = "Empirical logit")
-```
-
-## Empirical logit plot in R (quantitative predictor)
-
-Using the `emplogitplot1` function from the **Stat2Data** R package
-
-```{r}
-emplogitplot1(high_risk ~ age, 
-              data = heart_disease, 
-              ngroups = 10)
-```
-
-## Empirical logit plot in R (interactions)
-
-Using the `emplogitplot2` function from the **Stat2Data** R package
-
-```{r}
-emplogitplot2(high_risk ~ age + currentSmoker, data = heart_disease, 
-              ngroups = 10, 
-              putlegend = "bottomright")
-```
-
-## Checking linearity
-
-::: columns
-::: {.column width="50%"}
-```{r}
-emplogitplot1(high_risk ~ age, 
-              data = heart_disease, 
-              ngroups = 10)
-```
-:::
-
-::: {.column width="50%"}
-```{r}
-emplogitplot1(high_risk ~ totChol, 
-              data = heart_disease, 
-              ngroups = 10)
-```
-:::
-:::
+-   Drop-in-deviance test
 
 . . .
 
-`r emo::ji("white_check_mark")` The linearity condition is satisfied. There is a linear relationship between the empirical logit and the predictor variables.
+Can use AIC and BIC to compare models in both scenarios
 
-## Checking randomness
-
-We can check the randomness condition based on the context of the data and how the observations were collected.
-
--   Was the sample randomly selected?
--   If the sample was not randomly selected, ask whether there is reason to believe the observations in the sample differ systematically from the population of interest.
-
-. . .
-
-`r emo::ji("white_check_mark")` The randomness condition is satisfied. We do not have reason to believe that the participants in this study differ systematically from adults in the U.S. in regards to health characteristics and risk of heart disease.
-
-## Checking independence
-
--   We can check the independence condition based on the context of the data and how the observations were collected.
--   Independence is most often violated if the data were collected over time or there is a strong spatial relationship between the observations.
-
-. . .
-
-`r emo::ji("white_check_mark")` The independence condition is satisfied. It is reasonable to conclude that the participants' health characteristics are independent of one another.
+## References
