--- a/hw/references.bib
+++ b/hw/references.bib
@@ -90,3 +90,26 @@
 	url = {http://dx.doi.org/10.1080/26939169.2022.2074922},
 	langid = {en}
 }
+
+
+@article{ibanez2022impact,
+  title={The impact of nature video exposure on pro-environmental behavior: An experimental investigation},
+  author={Ibanez, Lisette and Roussel, S{\'e}bastien},
+  journal={Plos one},
+  volume={17},
+  number={11},
+  pages={e0275806},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{berry2001statistician,
+  title={A Statistician Reads the Sports Pages: Luck in Sports},
+  author={Berry, Scott M},
+  journal={Chance},
+  volume={14},
+  number={1},
+  pages={52--57},
+  year={2001},
+  publisher={Taylor \& Francis}
+}
