--- a/hw/hw-04.qmd
+++ b/hw/hw-04.qmd
@@ -99,7 +99,7 @@ c.  In the study, Berry reported that for professional basketball $\hat{\beta}_0
 
 ## Exercise 4
 
-In the paper [“](https://web-s-ebscohost-com.proxy.lib.duke.edu/ehost/pdfviewer/pdfviewer?vid=0&sid=221ae3cd-b01e-4432-a4dc-4b259e895086%40redis)[Employing Standardized Risk Assessment in Pretrial Release Decisions: Association With Criminal Justice Outcomes and Racial Equity”](https://pubmed.ncbi.nlm.nih.gov/33090864/) [@marlowe2020a] analyze the risk predictions produced by a black-box algorithm used to determine whether a defendant is considered “high risk” of being rearrested if they are released while awaiting trial. Such algorithms are used by judges in some states to help determine whether or not defendants are released while awaiting trial.
+In the paper [“](https://web-s-ebscohost-com.proxy.lib.duke.edu/ehost/pdfviewer/pdfviewer?vid=0&sid=221ae3cd-b01e-4432-a4dc-4b259e895086%40redis)[Employing Standardized Risk Assessment in Pretrial Release Decisions: Association With Criminal Justice Outcomes and Racial Equity”](https://pubmed.ncbi.nlm.nih.gov/33090864/) @marlowe2020employing analyze the risk predictions produced by a black-box algorithm used to determine whether a defendant is considered “high risk” of being rearrested if they are released while awaiting trial. Such algorithms are used by judges in some states to help determine whether or not defendants are released while awaiting trial.
 
 The authors examine the algorithm’s risk predictions and whether a person was rearrested for over 500 defendants released pretrial in a southern state. For each person, the algorithm produced one of the following predictions: “High Risk” or “Low Risk”. The observed outcome was “Rearrested” (coded as 1) or “Not Rearrested” (coded as 0). Below are some results from the analysis:
 
