--- a/hw/references.bib
+++ b/hw/references.bib
@@ -113,3 +113,14 @@
   year={2001},
   publisher={Taylor \& Francis}
 }
+
+@article{marlowe2020employing,
+  title={Employing standardized risk assessment in pretrial release decisions: Association with criminal justice outcomes and racial equity.},
+  author={Marlowe, Douglas B and Ho, Timothy and Carey, Shannon M and Chadick, Carly D},
+  journal={Law and Human Behavior},
+  volume={44},
+  number={5},
+  pages={361},
+  year={2020},
+  publisher={Educational Publishing Foundation}
+}
